done with the main page UI and ServerSideRenderingProps, squashed the previous bug of the main page image (#4) 🤕

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 @layer base {
+        /* width */
+    .no-scrollbar::-webkit-scrollbar {
+        display:none;
+    }
+    .x-scrollbar{
+        overflow-x: hidden;
+    }
+    .class-1::-webkit-scrollbar {
+        width: 0.4rem;
+        border-radius:5px;
+    }
+    /* Track */
+    .class-2::-webkit-scrollbar-track {
+        background: transparent;
+        border-radius: 10px;
+    }
+    /* Handle */
+    .class-3::-webkit-scrollbar-thumb {
+        background: #cc0000;
+        border-radius: 10px;
+    }
+    /* Handle on hover */
+    .class-4::-webkit-scrollbar-thumb:hover {
+        background: #ff0000;
+    }
+    
     body {
-        @apply bg-[#141414] text-white font-nunito;
+        @apply bg-[#141414] text-white font-nunito class-1 class-2 class-3 class-4;
+        max-width: 100vw;
+        scroll-behavior: smooth;
     }
     header {
         @apply fixed top-0 z-50 flex w-full items-center justify-between px-4 py-4 transition-all lg:px-10 lg:py-6;
     }
+    
 }
 
 @layer components {
